+getProfile func
