# service/api/models/user.go
@@ -11,11 +11,9 @@ type User struct {
 type Profile struct {
     UserID        string    `db:"userID"`
     Username      string  `db:"username"`
-    Name          string  `db:"name"`
-	Surname       string  `db:"surname"`
-	FollowerList  []User  `json:"followerList"`
-    FollowingList []User  `json:"followingList"`
-    BanList       []User  `json:"banList"`
-    PhotoList     []Picture `json:"photoList"`
+	FollowerList  []string  `json:"followerList"`
+    FollowingList []string  `json:"followingList"`
+    BanList       []string  `json:"banList"`
+    PhotoList     []string `json:"photoList"`
 }
 
